--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Angular 2 - Simple Reddit</title>
+    <script src="node_modules/es6-shim/es6-shim.js"></script>
 </head>
 <body>
 
